# scribe

./: .gitignore  .gitreview  README.md  ci_test.sh  requirements.txt  run_scribe.py  scribe.py  setup.cfg  setup.py  test-requirements.txt  tox.ini
transcribe/: __init__.py  render.py
transcribe/lib/: util.py
transcribe/schema/: cpu_vulnerabilities.yml  dmidecode.yml  k8s_cluster_info.yml  lspci.yml  ocp_dns.yml  sysctl.yml  yum_repos.yml
transcribe/scribe_modules/: __init__.py  base_scribe_module.py  cpu_vulnerabilities.py  cpuinfo.py  dmidecode.py  k8s_cluster_info.py  k8s_configmaps.py  k8s_namespaces.py  k8s_nodes.py  k8s_pods.py  lspci.py  meminfo.py  nvidia_smi.py  ocp_default_ingress_controller.py  ocp_dns.py  ocp_install_config.py  ocp_kube_apiserver.py  ocp_kube_controllermanager.py  ocp_net_attachments.py  ocp_network_operator.py  sysctl.py  yum_repos.py
transcribe/scribe_modules/lib/: k8s_util.py  util.py
transcribe/scribes/: __init__.py  base_scribe.py  foo.py  stockpile.py
transcribe/scribes/lib/: util.py
