[metadata]
name = setup.cfg
author = redhat-performance
author-email = browbench@redhat.com
summary = Data processing tool to provide a CDM adhering readily indexable JSON docs
description-file =
    README.md
home-page = https://github.com/redhat-performance/scribe
requires-python = >=3
classifier =
    Environment :: Browbench
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    transcribe
extra_files =
    transcribe/schema/yum_repos.yml
    transcribe/schema/dmidecode.yml

[entry_points]
console_scripts =
    scribe = scribe:main

[pbr]
skip_authors = True
skip_changelog = True
